--- a/tutorials/ProcessMonitoring_PCA.ipynb
+++ b/tutorials/ProcessMonitoring_PCA.ipynb
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Variable # 24 seem to make large contributions to both the indexes and in Figure below we can see that there was a sharp decline in its value towards the onset of process fault in the dataset. A plant operator can use his/her judgement to further troubleshoot the abnormality to isolate the root-cause."
+    "#### Variable # 24 seems to make large contributions to both the indexes and in Figure below we can see that there was a sharp decline in its value towards the onset of process fault in the dataset. A plant operator can use his/her judgement to further troubleshoot the abnormality to isolate the root-cause."
    ]
   },
   {
