--- a/tutorials/dataFiles/README
+++ b/tutorials/dataFiles/README
@@ -1,25 +1,25 @@
 Data sources:
 
-- *Low-Density Polyethylene (LDPE) Process Data*:
+- Low-Density Polyethylene (LDPE) Process Data:
 
        Obtained from https://openmv.net.
 
            
-- *Tennessee Eastman Process Data*: 
+- Tennessee Eastman Process Data: 
 
        Available at https://github.com/camaramm/tennessee-eastman-profBraatz.
        
        Citation: Reith, C.A., B.D. Amsel, R. Tran., and B. Maia. Additional Tennessee Eastman process simulation data for anomaly detection evaluation. Harvard Dataverse, Version 1, 2017
        
              
-- *Pulp & Paper Manufacturing Process Data (Kamyr digester)*:
+- Pulp & Paper Manufacturing Process Data (Kamyr digester):
 
        Obtained from https://openmv.net. 
        
        Citation: Dayal et al. "Application of feedforward neural networks and partial least squares regression for modelling Kappa number in a continuous Kamyr digester", Pulp and Paper Canada, 95, 1994, p T7-T13.
 
 
-- *Polymer Manufacturing Process Data (proc1a)*:  
+- Polymer Manufacturing Process Data (proc1a):  
 
-       Originally obtained from https://landing.umetrics.com/downloads-other-downloads (unfortunately this link no longer seems to work; data file is provided in the respective folder in this repository). 
+       Originally obtained from https://landing.umetrics.com/downloads-other-downloads (unfortunately this link no longer seems to work). 
        Dataset also referenced at https://www.academia.edu/38630159/Multivariate_data_analysis_wiki
